--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="خدمة مدارس الأحد - جمع بيانات الأطفال" />
+<meta property="og:description" content="املأ بيانات أطفالك لتسهيل التواصل ومتابعة حضورهم" />
+<meta property="og:image" content="رابط صورة البوست" />
+<meta property="og:url" content="https://elamir-nady.github.io/SundaySchool/" />
+
 <title>تسجيل الأطفال - خدمة مدارس الأحد</title>
 
 <script type="module">
